<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:text="@string/result_bmi_calculator"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="BMI-Rechner" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_bmi_label"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="BMI" />

            <TextView
                android:id="@+id/bmi_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_bmi_result"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/result_classified"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="Klassifizierung" />

            <TextView
                android:id="@+id/classification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="300dp"
                android:text="@string/result_classification"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>